Pre-Machine Fix
temp

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ bin
 .metadata
 .classpath
 .project
+.eclipse
 
 # idea
 out
@@ -16,6 +17,15 @@ out
 # gradle
 build
 .gradle
+
+# forge
+CREDITS-fml
+gradlew
+LICENSE-new
+MinecraftForge-Credits
+Paulscode SoundSystem CodecIBXM License
+Reactioncraft-3_Client.launch
+Reactioncraft-3_Server.launch
 
 # other
 eclipse
